# model_instrument

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  console.html  demo.html  genindex.html  index.html  install.html  license.html  logging_config.html  notebook.html  objects.inv  py-modindex.html  pyproject.toml  qs.html  script.html  search.html  searchindex.js  sessions.html
.github/workflows/: code.yml  docs.yml
_modules/: index.html
_modules/instrument/callbacks/: nexus_data_file_writer.html  spec_data_file_writer.html
_modules/instrument/utils/: aps_functions.html  controls_setup.html  helper_functions.html  logging_setup.html  metadata.html
_sources/: index.rst.txt  install.rst.txt  license.rst.txt  notebook.rst.txt  script.rst.txt  sessions.rst.txt
_sources/api/: callbacks.rst.txt  configs.rst.txt  devices.rst.txt
api/: callbacks.html  configs.html  core.html  devices.html  index.html  plans.html  startup.html  utils.html
docs/: requirements.txt
docs/source/: api.rst  conf.py  console.rst  demo.ipynb  index.rst  install.rst  license.rst  logging_config.rst  notebook.rst  qs.rst  script.rst
docs/source/api/: callbacks.rst  configs.rst  core.rst  devices.rst  index.rst  plans.rst  startup.rst  utils.rst
qs/: README.md  config.yml  existing_plans_and_devices.yaml  qs-config.yml  qs_host.sh
src/bluesky_session/: LICENSE  __init__.py  startup.py
src/bluesky_session/callbacks/: __init__.py
src/bluesky_session/utils/: __init__.py  best_effort.py  catalog.py  functions.py  registry.py  run_engine.py
src/bluesky_session/utils/tests/: __init__.py  common.py
src/instrument/: LICENSE  __init__.py  startup.py
src/instrument/callbacks/: __init__.py  nexus_data_file_writer.py  spec_data_file_writer.py
src/instrument/configs/: README.md  config.py  guarneri.toml  iconfig.yml  loaders.py  logging.yml
src/instrument/core/: __init__.py  _logging_setup.py  aps_dm_setup.py  best_effort.py  best_effort_init.py  catalog.py  catalog_init.py  debug_setup.py  epics_setup.py  functions.py  metadata.py  mpl_setup.py  ophyd_setup.py  run_engine.py  run_engine_init.py
src/instrument/devices/: __init__.py  simulated_1d_detector.py
src/instrument/plans/: __init__.py
src/instrument/tests/: __init__.py  common.py  sim_plans.py  test_general.py
src/instrument/utils/: __init__.py  _logging_setup.py  aps_dm_setup.py  aps_functions.py  aps_helper.py  best_effort.py  catalog.py  config.py  controls_setup.py  debug_setup.py  epics_setup.py  epics_tools.py  exceptions.py  functions.py  guarneri.py  helper.py  helper_functions.py  logging_setup.py  metadata.py  mpl_setup.py  ophyd_setup.py  registry.py  run_engine.py
src/instrument_template/: LICENSE  __init__.py  startup.py
src/instrument_template/configs/: iconfig.yml
src/instrument_template/utils/: config.py  mpl_setup.py  run_engine.py
